--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -37,11 +37,11 @@
 
     <!-- Blog -->
     <!-- Form -->
-    {{#if messages.success}}
+    {{!-- {{#if messages.success}}
     <div class="alert alert-danger" role="alert">
     {{messages.success}}
     </div>
-    {{/if}}
+    {{/if}} --}}
 
     <div class="blog">
       {{#if isLogin}}
