--- a/views/blog-detail.hbs
+++ b/views/blog-detail.hbs
@@ -27,7 +27,7 @@
       <div class="blog-detail-container">
         <h1>{{blog.title}}</h1>
         <div class="author">{{blog.postAt}} | {{blog.author}}</div>
-        <img src="../public/assets/images/blog-img-detail.png" alt="detail" />
+        <img src="../uploads/{{this.image}}" alt="detail" />
         <p>
           {{blog.content}}
         </p>
