--- a/views/add-blog.hbs
+++ b/views/add-blog.hbs
@@ -30,7 +30,7 @@
                     </ul>
 
             {{#if isLogin}}
-              <ul>
+              <ul class="d-flex navbar-nav">
                   <li class="nav-item">
                       <span class="nav-link" aria-current="page">Hallo, {{user.name}}</span>
                   </li>
